--- a/frontend/src/assets/css/cmps/toy-edit.css
+++ b/frontend/src/assets/css/cmps/toy-edit.css
@@ -1,4 +1,4 @@
-.todo-edit{
+.toy-edit{
     padding-inline: var(--padding-gap);
     padding-block: var(--padding-gap);
     box-shadow: inset 0 -1px 0 0 rgba(100, 121, 143, 0.122);
