--- a/frontend/src/assets/css/main.css
+++ b/frontend/src/assets/css/main.css
@@ -11,14 +11,14 @@
 /* Cmps */
 @import './cmps/app-footer.css';
 @import './cmps/app-header.css';
-@import './cmps/todo-edit.css';
-@import './cmps/todo-filter.css';
-@import './cmps/todo-list.css';
-@import './cmps/todo-preview.css';
+@import './cmps/toy-edit.css';
+@import './cmps/toy-filter.css';
+@import './cmps/toy-list.css';
+@import './cmps/toy-preview.css';
 @import './cmps/user-msg.css';
 @import './cmps/user-welcome.css';
 
 
 /* Views */
-@import './views/todo-index.css';
+@import './views/toy-index.css';
 @import './views/user-profile.css';
