--- a/frontend/src/assets/style/cmps/toy-list.css
+++ b/frontend/src/assets/style/cmps/toy-list.css
@@ -1,4 +1,29 @@
-.toy-list {
-    /* background-color: var(--todo-list-color0); */
-    box-shadow: inset 0 -1px 0 0 rgba(100, 121, 143, 0.122);
+.toys-list {
+    padding: 15px 0 0;
+    list-style: none;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    gap: 15px;
+    
+}
+
+.toy-card {
+    border: 1px solid black ;
+    border-radius: 1em;
+}
+
+.card-menu {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin-bottom: 0.25em;
+
+}
+
+.toys-list li {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    background-color: var(--clr1bg);
 }
