--- a/frontend/src/assets/style/cmps/toy-preview.css
+++ b/frontend/src/assets/style/cmps/toy-preview.css
@@ -1,15 +1,12 @@
 .toy-preview {
-    padding-inline: var(--padding-gap);
-    box-shadow: inset 0 -1px 0 0 rgba(100, 121, 143, 0.122);
+    /* text-align: center; */
+    padding: 0.3em;
     display: flex;
-    align-items: center;
+    flex-direction: column;
+    /* align-items: left; */
 }
 
-.toy-preview:hover {
-    box-shadow:
-        inset 1px 0 0 var(--toy-preview-shadow-color0),
-        inset -1px 0 0 var(--toy-preview-shadow-color0),
-        0 1px 2px 0 var(--toy-preview-shadow-color1),
-        0 1px 3px 1px var(--toy-preview-shadow-color1);
-    z-index: 2;
+.book-preview h4{
+    text-transform: capitalize;
+    color: black;
 }
