--- a/frontend/src/assets/style/cmps/toy-list.css
+++ b/frontend/src/assets/style/cmps/toy-list.css
@@ -16,14 +16,6 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
-    margin-bottom: 0.25em;
+    border-inline-end: 1em;
 
-}
-
-.toys-list li {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
-    background-color: var(--clr1bg);
 }
