--- a/frontend/src/assets/style/cmps/toy-preview.css
+++ b/frontend/src/assets/style/cmps/toy-preview.css
@@ -1,12 +1,21 @@
 .toy-preview {
-    /* text-align: center; */
     padding: 0.3em;
     display: flex;
     flex-direction: column;
-    /* align-items: left; */
 }
 
-.book-preview h4{
+.toy-preview h2 {
+   text-align: center;
+   margin-bottom: .5em;
+}
+
+.card-labels {
+    margin-top: 1em;
+    display: flex;
+    flex-direction: column;
+}
+
+.toy-preview h4{
     text-transform: capitalize;
     color: black;
 }
