--- a/frontend/src/assets/style/cmps/toy-preview.css
+++ b/frontend/src/assets/style/cmps/toy-preview.css
@@ -5,8 +5,8 @@
 }
 
 .toy-preview h2 {
-   text-align: center;
-   margin-bottom: .5em;
+    text-align: center;
+    margin-bottom: .5em;
 }
 
 .card-labels {
@@ -15,7 +15,17 @@
     flex-direction: column;
 }
 
-.toy-preview h4{
+.toy-preview h4 {
     text-transform: capitalize;
     color: black;
+}
+
+.green {
+    color: green;
+    font-weight: bold;
+}
+
+.red {
+    color: red;
+    font-weight: bold;
 }
