--- a/frontend/src/assets/style/cmps/toy-list.css
+++ b/frontend/src/assets/style/cmps/toy-list.css
@@ -1,13 +1,14 @@
 .toys-list {
     padding: 15px 0 0;
-    list-style: none;
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
     gap: 15px;
-    
 }
 
 .toy-card {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
     border: 1px solid black ;
     border-radius: 1em;
 }
@@ -17,5 +18,11 @@
     justify-content: space-around;
     align-items: center;
     border-inline-end: 1em;
+    margin-bottom: .25em;
+}
 
+.card-menu button{
+   border: none;
+   box-shadow: none;
+   background-color: inherit;
 }
