--- a/frontend/src/assets/style/cmps/toy-preview.css
+++ b/frontend/src/assets/style/cmps/toy-preview.css
@@ -2,15 +2,17 @@
     padding: 0.3em;
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
 }
 
 .toy-preview h2 {
    text-align: center;
-   margin-bottom: .5em;
+   margin-bottom: .3em;
+   text-decoration: underline;
 }
 
 .card-labels {
-    margin-top: 1em;
+    margin-top: .5em;
     display: flex;
     flex-direction: column;
 }
