made custom buttons skeleton

--- a/frontend/src/assets/style/main.css
+++ b/frontend/src/assets/style/main.css
@@ -6,6 +6,7 @@
 /* Basics */
 @import 'basics/base.css';
 @import 'basics/helpers.css';
+/* @import 'basics/layout.css'; */
 
 
 /* Cmps */
@@ -17,11 +18,9 @@
 @import 'cmps/toy-preview.css';
 @import 'cmps/user-msg.css';
 @import 'cmps/user-welcome.css';
+@import 'cmps/custom-buttons.css';
 
 
 /* Views */
 @import 'views/toy-index.css';
 @import 'views/user-profile.css';
-
-
-
