--- a/frontend/src/assets/style/cmps/toy-list.css
+++ b/frontend/src/assets/style/cmps/toy-list.css
@@ -9,7 +9,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    border: 1px solid black ;
+    border: 1px solid black;
     border-radius: 1em;
 }
 
@@ -19,10 +19,6 @@
     align-items: center;
     border-inline-end: 1em;
     margin-bottom: .25em;
+    width: 100%;
 }
 
-.card-menu button{
-   border: none;
-   box-shadow: none;
-   background-color: inherit;
-}
