--- a/frontend/src/assets/style/cmps/toy-list.css
+++ b/frontend/src/assets/style/cmps/toy-list.css
@@ -10,7 +10,9 @@
     flex-direction: column;
     justify-content: space-between;
     border: 1px solid black;
-    border-radius: 1em;
+    border-radius: 1em; 
+    padding-inline: 15px;
+    padding-block:5px;
 }
 
 .card-menu {
