--- a/frontend/src/assets/styles/setup/_variables.scss
+++ b/frontend/src/assets/styles/setup/_variables.scss
@@ -24,4 +24,4 @@ $padded-break-wide: $break-wide + $layoutMainPadding * 2;
 
 
 // SIZE
-$headerFooterHeight: 100px;
+$headerFooterHeight: calc(100px + $layoutButtonsContainerPadding);
