--- a/frontend/src/assets/styles/views/_toy-index.scss
+++ b/frontend/src/assets/styles/views/_toy-index.scss
@@ -1,5 +1,5 @@
 .toy-index{
     &:first-child{
-        padding-block:$layoutButtonsContainerPadding;
+        padding-block:$layoutSmallPadding;
     }
 }
