--- a/frontend/src/assets/styles/components/_toy-preview.scss
+++ b/frontend/src/assets/styles/components/_toy-preview.scss
@@ -2,7 +2,7 @@
     border: 1px solid black;
 
     .toy-preview {
-        padding: $layoutButtonsContainerPadding;
+        padding: $layoutSmallPadding;
         height: 100%;
         display: flex;
         flex-direction: column;
