added other label, made label-list component

--- a/frontend/src/assets/styles/styles.scss
+++ b/frontend/src/assets/styles/styles.scss
@@ -20,4 +20,5 @@
 @import 'views/home';
 @import 'views/toy-index';
 @import 'views/toy-dashboard';
+@import 'views/toy-edit';
 @import 'views/about';
