fixed label-list component, so it will be the only of it's kind, and fixed up some css for it

--- a/frontend/src/assets/styles/components/_toy-filter.scss
+++ b/frontend/src/assets/styles/components/_toy-filter.scss
@@ -6,6 +6,11 @@
     }
 
     form {
+        .main-input {
+            display: flex;
+            gap: calc($layoutSmallPadding * 2);
+        }
+
         .label-selector {
             display: grid;
             grid-template-columns: 150px 150px 150px 150px;
