--- a/frontend/src/assets/styles/views/_toy-edit.scss
+++ b/frontend/src/assets/styles/views/_toy-edit.scss
@@ -7,7 +7,7 @@
         }
         .main-input{
             display: flex;
-            gap: $layoutSmallPadding;
+            gap: calc($layoutSmallPadding * 2);
         }
 
         .labels-input .label-selector {
