--- a/frontend/src/assets/styles/styles.scss
+++ b/frontend/src/assets/styles/styles.scss
@@ -15,6 +15,7 @@
 @import 'components/toy-filter';
 @import 'components/toy-list';
 @import 'components/toy-preview';
+@import 'components/toy-sort';
 
 // VIEWS
 @import 'views/home';
