--- a/frontend/src/assets/styles/components/_app-header.scss
+++ b/frontend/src/assets/styles/components/_app-header.scss
@@ -7,12 +7,13 @@ header.app-header-container {
     .app-header {
         display: flex;
         flex-direction: column;
-        justify-content: space-between;
+        // justify-content: space-between;
 
 
         .nav-container {
             display: flex;
             justify-content: space-between;
+            align-items: center;
 
             .logo-container {
                 display: flex;
@@ -41,6 +42,18 @@ header.app-header-container {
 
         .user-container {
             white-space: nowrap;
+
+            .user-welcome{
+                display: flex;
+                gap: calc($layoutMainPadding * 2);
+
+                article h2{
+                    // display: flex;
+                    margin-block:0;
+                    margin-inline: 0;
+                }
+
+            }
         }
     }
 }
