added comments css in toy-details

--- a/frontend/src/assets/styles/styles.scss
+++ b/frontend/src/assets/styles/styles.scss
@@ -22,5 +22,6 @@
 @import 'views/home';
 @import 'views/toy-index';
 @import 'views/toy-dashboard';
+@import 'views/toy-details';
 @import 'views/toy-edit';
 @import 'views/about';
