added scss for details page

--- a/frontend/src/assets/styles/basics/_base.scss
+++ b/frontend/src/assets/styles/basics/_base.scss
@@ -4,7 +4,7 @@
 
 body {
     margin: 0;
-    background-color: darken($clr3,10%);
+    background-color: darken($clr3, 10%);
     color: $clr5;
 }
 
