--- a/frontend/src/assets/styles/styles.scss
+++ b/frontend/src/assets/styles/styles.scss
@@ -16,6 +16,7 @@
 @import 'components/toy-list';
 @import 'components/toy-preview';
 @import 'components/toy-sort';
+@import 'components/toy-review';
 @import 'components/user-msg';
 
 // VIEWS
