fixed isAdmin key disappear in backend async store in admin loggedinUser, fixed review delete, by fixing up asyncLocalStorage in backEnd, made user-msg sticky - stay withing user view always when appear.

--- a/frontend/src/assets/styles/components/_user-msg.scss
+++ b/frontend/src/assets/styles/components/_user-msg.scss
@@ -1,10 +1,11 @@
 .user-msg {
     // display: flex;
     // flex-direction: column;
-    position: absolute;
+    position: fixed;
     height: 100px;
     width: 100px;
     inset-inline: 50%;
+    top: 1em;
 
     button {
         // width: fit-content;
