--- a/frontend/src/assets/styles/views/_toy-details.scss
+++ b/frontend/src/assets/styles/views/_toy-details.scss
@@ -4,8 +4,11 @@
         padding-block: $layoutMainPadding;
     }
 
-    .custom-button {
+
+    .custom-button  {
         margin-block: $layoutMainPadding;
+        @include custom-btn;
+        // font-size: 200%;
     }
 
     .details {
