--- a/frontend/src/assets/styles/views/_toy-details.scss
+++ b/frontend/src/assets/styles/views/_toy-details.scss
@@ -5,9 +5,9 @@
     }
 
 
-    .custom-button  {
+    .custom-button {
         margin-block: $layoutMainPadding;
-        @include custom-btn;
+        @include custom-button($clr4);
         // font-size: 200%;
     }
 
