--- a/frontend/src/assets/styles/components/_app-header.scss
+++ b/frontend/src/assets/styles/components/_app-header.scss
@@ -18,6 +18,7 @@ header.app-header-container {
             .logo-container {
                 display: flex;
                 align-items: center;
+
                 img {
                     height: calc($headerFooterHeight / 2);
                 }
@@ -42,17 +43,27 @@ header.app-header-container {
 
         .user-container {
             white-space: nowrap;
+            display: flex;
+            gap:$layoutMainPadding;
 
-            .user-welcome{
+            .custom-button {
+                @include custom-button($clr4);
+            }
+
+            .user-welcome {
                 display: flex;
                 gap: calc($layoutMainPadding * 2);
 
-                article h2{
+                article h2 {
                     // display: flex;
-                    margin-block:0;
+                    margin-block: 0;
                     margin-inline: 0;
                 }
 
+            }
+            .register-form{
+                display: flex;
+                gap:$layoutMainPadding;
             }
         }
     }
