--- a/frontend/src/assets/styles/styles.scss
+++ b/frontend/src/assets/styles/styles.scss
@@ -17,6 +17,7 @@
 @import 'components/toy-preview';
 @import 'components/toy-sort';
 @import 'components/toy-review';
+@import 'components/toy-msg';
 @import 'components/user-msg';
 
 // VIEWS
